Integrate Sonar plugin and refactor Transaction APIs
Integrate Sonar Maven plugin for code quality checks. Refactor transaction related APIs; Changed the return value of createTransaction method in RestService to transaction ID string rather than returning the DTO. Also, modified the corresponding delegated implementation to handle the change. Ensure config server is optional in application YAML. Update the Transaction API definition to ensure IDs are of UUID format. The changes are aim to align with RESTful Best Practices, increase code quality and to handle edge cases where a configuration server might not be available.
